Converter に applicationStatusesをセット。applicationStatusIDとCourseIDが１対１になるように修正